# Depths-of-Hoenn

./: CMakeLists.txt  README.md
core/: camera.h
core/exercices/: object.h
core/exercices/ex01/: ex01.cpp
core/exercices/ex02/: ex02.cpp
core/exercices/ex03/: ex03.cpp
core/exercices/ex05/: ex05.cpp
core/exercices/ex06/: ex06.cpp
core/exercices/ex07/: ex07.cpp
core/exercices/ex08/: ex08.cpp
core/exercices/ex09/: ex09.cpp
core/exercices/ex10/: ex10.cpp
core/objects/Kyogre/: license.txt  scene.gltf
core/objects/chinchou/: license.txt  scene.gltf
core/objects/lumineon/: license.txt  scene.gltf
core/objects/milotic/: license.txt  scene.gltf
core/objects/relicanth/: license.txt  scene.gltf
core/objects/wailord/: license.txt  scene.gltf
core/solutions/ex03/: sol03.cpp
core/solutions/ex05/: sol05.cpp
src/: CMakeLists.txt  main.cpp  model.h
